<resources>
    <string name="app_name">FragmentApp</string>
    <string name="button_back">Button Back</string>
    <string name="button_add">Button Add</string>
    <string name="button_submit">Submit</string>
    <string name="create">Create</string>
    <string name="button_home">Button Home</string>
    <string name="button_info">Button Info</string>
    <string name="button_setting">Button Setting</string>
    <string name="button_notification">Button Notification</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="error_fragment_not_found">Error: fragment not found</string>
    <string name="navigation_Page">navigationPage</string>
    <string name="edt_name">Name</string>
    <string name="edt_first_name">First Name</string>
    <string name="edt_last_name">Last Name</string>
    <string name="edt_age">Age</string>
    <string name="job_name">Job Name</string>
    <string name="tile">Title</string>
    <string name="body">Body</string>
    <string name="action">Action</string>
    <string name="reward">Reward: 0 USD</string>
    <string name="btn_reward">Reward</string>
</resources>