<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/edt_first_name"
        android:textSize="@dimen/_16sp" />
    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/edt_last_name"
        android:textSize="@dimen/_16sp" />
    <TextView
        android:id="@+id/txtAge"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edt_age"
        android:textSize="@dimen/_16sp" />

    <TextView
        android:id="@+id/txtJob"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/job_name"
        android:textSize="@dimen/_16sp" />
</LinearLayout>