<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_home"
        android:src="@drawable/btn_home_normal" />

    <ImageButton
        android:id="@+id/btnNotification"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_notification"
        android:src="@drawable/btn_notification_normal" />

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_info"
        android:src="@drawable/btn_info_normal" />

    <ImageButton
        android:id="@+id/btnSetting"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_setting"
        android:src="@drawable/btn_settings_normal" />
</LinearLayout>