<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ntAdView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tile" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body" />

        <Button
            android:id="@+id/btnAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action" />

        <com.google.android.gms.ads.nativead.MediaView
            android:id="@+id/mdVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</com.google.android.gms.ads.nativead.NativeAdView>
