<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_16dp"
        style="@style/CustomEditText"
        android:background="@drawable/edt_border"
        android:autofillHints="Enter Full Name"
        android:hint="@string/edt_name"
        android:textColor="@color/black"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edtAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginBottom="@dimen/_24dp"
        style="@style/CustomEditText"
        android:background="@drawable/edt_border"
        android:autofillHints="Enter Age"
        android:hint="@string/edt_age"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_50dp"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>